<resources>
    <string name="app_name">Android_Task Maz</string>


    <string name="unexpected_error">Unexpected Error</string>
    <string name="bad_request">Bad Request</string>
    <string name="request_not_found">Request not found</string>
    <string name="server_error">Server error</string>
    <string name="unauthorized_user">Unauthorized User</string>
    <string name="not_connected_to_network">Not connected to network</string>
    <string name="IOException">Problem In Network</string>

    <string name="try_again_something_went_wrong">Try Again, something went wrong</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="user_not_logged_in_msg">User not logged in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="main_category">Main Category</string>
    <string name="submit">Submit</string>
    <string name="sub_category">Sub Category</string>
    <string name="no_category_was_selected">No Category was selected</string>
    <string name="wait_for_categories">Wait for Categories</string>
    <string name="select">Select</string>
    <string name="other">Other</string>
    <string name="enter_value">Enter value</string>
    <string name="done_">Done</string>
    <string name="selected_values">Selected Values</string>
    <string name="specify_here">Specify here</string>


</resources>